--- a/sass/color-control.scss
+++ b/sass/color-control.scss
@@ -41,6 +41,12 @@ $text-white: rgba(white, .9);
 //   @extend [data-bs-theme="light"];
 // }
 
+.callout.callout-style-default {
+  border-right: none;
+  border-top: none;
+  border-bottom: 1px solid var(--bs-green);
+}
+
 .dropdown-item:hover {
   color: $link-color;
   background-color: mix($body-color, $navbar-bg, 20%);
