--- a/teaching/ior-listing.md.ejs
+++ b/teaching/ior-listing.md.ejs
@@ -15,7 +15,7 @@
 
 :::{.card-body}
 
-#### [<%- item.number %>: <%- item.title %>](<%- item.path %>){.card-title .course-title} 
+#### [<%- item.number %>: <%- item.title %>]{.card-title .course-title} 
 
 [Terms taught: _<%- item.terms %>_]{.course-terms}
 
@@ -25,7 +25,7 @@
 
 <% if (item.repo_slug) { %>
 
-[Course Repository](https://github.com/connortwiegand/<%- item.repo_slug %>){.course-repo .btn .btn-primary href="#"}
+[Course Repository](https://github.com/connortwiegand/<%- item.repo_slug %>){.course-repo .btn .btn-primary href="#" target="_blank"}
 
 <% } %>
 
