--- a/sass/nav-sidebar.scss
+++ b/sass/nav-sidebar.scss
@@ -168,9 +168,9 @@ li.sidebar-item {
   }
 }
 
-#about-content {
-  --animate-duration: 1s;
-  --animate-duration: 2s;
+#about-content, .quarto-title {
+  // --animate-delay: 1s;
+  --animate-duration: 2s; //1s
 }
 
 .about-entity {
@@ -184,3 +184,28 @@ li.sidebar-item {
       padding-top: 80px;
   }
 }
+
+/*
+@keyframes fadeInDown-title {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100px, 0);
+    transform: translate3d(0, 100px, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.quarto-title {
+  --animate-duration: 2s;
+
+  .animate__fadeInDown {
+    -webkit-animation-name: fadeInDown-title;
+    animation-name: fadeInDown-title;
+  }
+}
+  */
