fix rss, projects

--- a/proj/proj-listing.md.ejs
+++ b/proj/proj-listing.md.ejs
@@ -6,7 +6,7 @@
 
 <% for (const paper of item.papers) { %>
 
-#### **[<%- paper.title %>](<% if (paper.draft_avail) { %> <%- paper.path %> <% } %>){.proj .paper .<%- item.category.replaceAll(" ", "-").toLowerCase() %>}**
+#### **[<%- paper.title %>]<% if (paper.draft_avail) { %>(<%- paper.path %>)<% } %>{.proj .paper .<%- item.category.replaceAll(" ", "-").toLowerCase() %> <% if (paper.no_link) { %>.no-link<% } %> }**
 
 :::{.with}
 <%- paper.co_auth %> 
