--- a/sass/dark-load.scss
+++ b/sass/dark-load.scss
@@ -13,5 +13,7 @@
 @import "nav-sidebar.scss";
 @import "header-footer.scss";
 @import "typeface.scss";
-@import "ratings.scss";
+@import "page-about.scss";
+@import "animate.scss";
 @import "cards.scss";
+@import "misc.scss";
