--- a/sass/cards.scss
+++ b/sass/cards.scss
@@ -12,16 +12,16 @@
   display: block;
 }
 
-
-.flex-buttons-end {
-  margin-left: 1.2rem;
-}
-
-blockquote {
-  border-left-color: $primary;
-
-}
-
 .card-header p {
   margin-bottom: 0;
+}
+
+.card {
+  .flex-buttons-end {
+    margin-left: 1.2rem;
+  }
+  
+  blockquote {
+    border-left-color: $primary;
+  }
 }
