change light theme border color

--- a/sass/custom-cols.scss
+++ b/sass/custom-cols.scss
@@ -15,8 +15,11 @@ $mine-shaft: #212121;
 // $cape-cod: #3d4144;
 // $charade: #2E3440;
 // $woodsmoke: #131516; //OG Jet
+// $cedar: #451616;
+// $finch: #696946;
 $cognac: #ab4522;
 $berry-red: #920000;
+$saddle: #4f2424;
 $fun-green: #006E33;
 
 $test: #1f2227;
