add MLL abstract; fix fonts

--- a/sass/typeface.scss
+++ b/sass/typeface.scss
@@ -1,8 +1,8 @@
 /*-- scss:defaults --*/
 
-$serif: Palatino, Georgia, Sitka, "Sitka Text", "Book Antiqua", Garamond, "Century Schoolbook", "Lucida Bright", serif;
+$serif: "Palatino Linotype", "Book Antiqua", Georgia, Sitka, "Sitka Text", Garamond, "Century Schoolbook", "Lucida Bright", serif;
 
-$sans-serif: "Segoe UI", "DejaVu Sans Book", "Noto Sans", Verdana, "Trebuchet MS", "Helvetica Neue", Helvetica, Roboto, "Lucida Sans", "Lucida Grande", sans-serif;
+$sans-serif: "Segoe UI", "Franklin Gothic Book", "Franklin Gothic Medium", "Trebuchet MS", "Helvetica Neue", Helvetica, Roboto, "DejaVu Sans", "DejaVu Sans Book", "Lucida Sans", "Lucida Grande", Verdana, sans-serif;
 
 $monospace: "Courier New", "Lucida Console", Consolas, Monaco, "DejaVu Sans Mono Book", monospace; 
 
